# ComfyUI-RogoAI-4DTimelapse

./: .gitignore  4D_TIMELAPSE_GUIDE.md  4D_timelapse_spec.docx  GITHUB_PUSH_GUIDE.md  HANDOVER_2026-03-10.md  HISTORY.md  LICENSE  PATH_NAVIGATOR_GUIDE.md  README.md  README_n.md  SPEC.md  SPEC_4D_LATTICE.md  __init__.py  composite_4d_video.py  export_transparent_video.py  file_structure.txt  grid_render_keyframes.py  grid_traverse.py  ltxv_stage_interpolate.py  make_stage_transitions.py  pyproject.toml  remove_bg_video.py  render_bg_animation.py  render_orbit_from_mesh.py  requirements.txt  run_3d_orbit.py  run_4d_batch.py  run_4d_parallax_test.py  run_4d_timelapse_v2.py  workflow_4d_grid.json  workflow_4d_timelapse.json  workflow_4d_youtube.json  workflow_4d_youtube_02.json  使い方.md  引継ぎ.md
nodes/: __init__.py  _nb4d_paths.py  gemini_image_gen.py  grid4d_nodes.py  ltxv_interpolator.py  ltxv_interpolator_v2.py  ltxv_interpolator_v3.py  ltxv_path_navigator.py  parallax_renderer.py  volumetric_timelapse_nodes.py
