[project]
name = "comfyui-rogo-nanobanana"
version = "1.0.0"
description = "ComfyUI nodes for Gemini / Imagen image generation via Google AI API"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["google-genai>=1.0.0"]

[tool.comfy]
PublisherId = "rogoai"
DisplayName = "NanoBanana - Gemini Image Generator"
Icon = ""
